--- a/src/todo
+++ b/src/todo
@@ -1,3 +1,3 @@
--dynamic font size
--fix checkbox shrinking issue
+-dynamic font size [done]
+-fix checkbox shrinking issue [done]
 -explore the react reorder list option to make thing pretty
