--- a/src/todo
+++ b/src/todo
@@ -1,3 +1,13 @@
 -dynamic font size [done]
 -fix checkbox shrinking issue [done]
 -explore the react reorder list option to make thing pretty
+
+==========aftermath================
+-read other solutions and pick up tips
+-useContext for exercise
+-fix the reports on frontend challenges
+-make a good read me page
+-update ur portfolio with those 2
+-make project images for these 2
+-clean the code
+-document the code for others
