--- a/src/todo
+++ b/src/todo
@@ -3,9 +3,9 @@
 -explore the react reorder list option to make thing pretty
 
 ==========aftermath================
--read other solutions and pick up tips
+-read other solutions and pick up tips [done]
 -useContext for exercise
--fix the reports on frontend challenges
+-fix the reports on frontend challenges [done]
 -make a good read me page
 -update ur portfolio with those 2
 -make project images for these 2
