--- a/src/todo
+++ b/src/todo
@@ -4,7 +4,7 @@
 
 ==========aftermath================
 -read other solutions and pick up tips [done]
--useContext for exercise
+-useContext for exercise [done]
 -fix the reports on frontend challenges [done]
 -make a good read me page
 -update ur portfolio with those 2
